--- a/email-read/config.json
+++ b/email-read/config.json
@@ -1,5 +1,5 @@
 {
     "imap": "imap.gmail.com:993",
-    "username": "alisson.darosci@gmail.com",
-    "password": "Magic8917123asd."
+    "username": "email...@gmail.com",
+    "password": "senha...."
 }
