--- a/email-read/config.json
+++ b/email-read/config.json
@@ -1,5 +1,5 @@
 {
     "imap": "imap.gmail.com:993",
-    "username": "email...@gmail.com",
-    "password": "senha...."
+    "username": "...@gmail.com",
+    "password": "...."
 }
