--- a/email-read/config.json
+++ b/email-read/config.json
@@ -1,5 +1,5 @@
 {
     "imap": "imap.gmail.com:993",
-    "username": "...@gmail.com",
-    "password": "...."
+    "username": "...@cupola.com.br",
+    "password": "..."
 }
